билд с overflow hidden у row-fixed

--- a/src/index.less
+++ b/src/index.less
@@ -40,7 +40,7 @@ code {
 .row-fixed {
   background-color: #1616ff;
   z-index: 2;
-  overflow-x: scroll;
+  overflow-x: hidden;
   width: 1000px;
   &::-webkit-scrollbar {
     display: none;
